src/main/java/es/weso/shexlite/compiler/parser/generated/ShExLParser.java
/*
 * MIT License
 *
 * Copyright (c) 2020 WESO Research Group, University of Oviedo.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 *
 */

// Generated from C:/Users/Willy/Documents/github/weso/shex-lite/src/main/java/es/weso/shexlite/parser\ShExL.g4 by ANTLR 4.8
package es.weso.shexlite.compiler.parser.generated;

import es.weso.shexlite.compiler.ast.*;

import java.lang.String;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShExLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		INT_CONSTANT=10, REAL_CONSTANT=11, CHAR_CONSTANT=12, ID=13, IRI=14, SKIP_=15;
	public static final int
		RULE_shex_lite_doc = 0, RULE_prefix_def = 1, RULE_shape_def = 2, RULE_shape_body = 3, 
		RULE_constraint_def = 4, RULE_constraint_field = 5, RULE_constraint_type = 6, 
		RULE_property_def = 7, RULE_shape_inv = 8, RULE_prefix_inv = 9, RULE_primitive_type = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"shex_lite_doc", "prefix_def", "shape_def", "shape_body", "constraint_def", 
			"constraint_field", "constraint_type", "property_def", "shape_inv", "prefix_inv", 
			"primitive_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PREFIX'", "':'", "'{'", "'}'", "';'", "'@'", "'integer'", "'string'", 
			"'double'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "INT_CONSTANT", 
			"REAL_CONSTANT", "CHAR_CONSTANT", "ID", "IRI", "SKIP_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShExL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShExLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Shex_lite_docContext extends ParserRuleContext {
		public ShapeExpressionsFileNode ast;
		public Prefix_defContext prefix_def;
		public Shape_defContext shape_def;
		public TerminalNode EOF() { return getToken(ShExLParser.EOF, 0); }
		public List<Prefix_defContext> prefix_def() {
			return getRuleContexts(Prefix_defContext.class);
		}
		public Prefix_defContext prefix_def(int i) {
			return getRuleContext(Prefix_defContext.class,i);
		}
		public List<Shape_defContext> shape_def() {
			return getRuleContexts(Shape_defContext.class);
		}
		public Shape_defContext shape_def(int i) {
			return getRuleContext(Shape_defContext.class,i);
		}
		public Shex_lite_docContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shex_lite_doc; }
	}

	public final Shex_lite_docContext shex_lite_doc() throws RecognitionException {
		Shex_lite_docContext _localctx = new Shex_lite_docContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_shex_lite_doc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<DefinitionNode> defs = new ArrayList<DefinitionNode>();
			setState(26); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(23);
				((Shex_lite_docContext)_localctx).prefix_def = prefix_def();
				defs.add(((Shex_lite_docContext)_localctx).prefix_def.ast);
				}
				}
				setState(28); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				((Shex_lite_docContext)_localctx).shape_def = shape_def();
				defs.add(((Shex_lite_docContext)_localctx).shape_def.ast);
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			((Shex_lite_docContext)_localctx).ast =  new ShapeExpressionsFileNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), defs);
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_defContext extends ParserRuleContext {
		public PrefixDefNode ast;
		public Token ID;
		public Token IRI;
		public TerminalNode IRI() { return getToken(ShExLParser.IRI, 0); }
		public TerminalNode ID() { return getToken(ShExLParser.ID, 0); }
		public Prefix_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_def; }
	}

	public final Prefix_defContext prefix_def() throws RecognitionException {
		Prefix_defContext _localctx = new Prefix_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prefix_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(41);
				((Prefix_defContext)_localctx).ID = match(ID);
				}
			}

			setState(44);
			match(T__1);
			setState(45);
			((Prefix_defContext)_localctx).IRI = match(IRI);
			((Prefix_defContext)_localctx).ast =  new PrefixDefNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), (((Prefix_defContext)_localctx).ID!=null?((Prefix_defContext)_localctx).ID.getText():null), new URLNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), (((Prefix_defContext)_localctx).IRI!=null?((Prefix_defContext)_localctx).IRI.getText():null)));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_defContext extends ParserRuleContext {
		public ShapeDefNode ast;
		public Token ID;
		public Shape_bodyContext shape_body;
		public TerminalNode ID() { return getToken(ShExLParser.ID, 0); }
		public Shape_bodyContext shape_body() {
			return getRuleContext(Shape_bodyContext.class,0);
		}
		public Shape_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_def; }
	}

	public final Shape_defContext shape_def() throws RecognitionException {
		Shape_defContext _localctx = new Shape_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_shape_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__1);
			setState(49);
			((Shape_defContext)_localctx).ID = match(ID);
			setState(50);
			match(T__2);
			setState(51);
			((Shape_defContext)_localctx).shape_body = shape_body();
			setState(52);
			match(T__3);
			((Shape_defContext)_localctx).ast =  new ShapeDefNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), (((Shape_defContext)_localctx).ID!=null?((Shape_defContext)_localctx).ID.getText():null), ((Shape_defContext)_localctx).shape_body.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_bodyContext extends ParserRuleContext {
		public List<TripleConstraintNode> ast = new ArrayList<TripleConstraintNode>();
		public Constraint_defContext c1;
		public Constraint_defContext c2;
		public Constraint_defContext c3;
		public List<Constraint_defContext> constraint_def() {
			return getRuleContexts(Constraint_defContext.class);
		}
		public Constraint_defContext constraint_def(int i) {
			return getRuleContext(Constraint_defContext.class,i);
		}
		public Shape_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_body; }
	}

	public final Shape_bodyContext shape_body() throws RecognitionException {
		Shape_bodyContext _localctx = new Shape_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_shape_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(55);
				((Shape_bodyContext)_localctx).c1 = constraint_def();
				_localctx.ast.add(((Shape_bodyContext)_localctx).c1.ast);
				}
				break;
			case 2:
				{
				setState(62); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(58);
						((Shape_bodyContext)_localctx).c2 = constraint_def();
						setState(59);
						match(T__4);
						_localctx.ast.add(((Shape_bodyContext)_localctx).c2.ast);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(64); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(66);
				((Shape_bodyContext)_localctx).c3 = constraint_def();
				_localctx.ast.add(((Shape_bodyContext)_localctx).c3.ast);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_defContext extends ParserRuleContext {
		public TripleConstraintNode ast;
		public Constraint_fieldContext constraint_field;
		public Constraint_typeContext constraint_type;
		public Constraint_fieldContext constraint_field() {
			return getRuleContext(Constraint_fieldContext.class,0);
		}
		public Constraint_typeContext constraint_type() {
			return getRuleContext(Constraint_typeContext.class,0);
		}
		public Constraint_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_def; }
	}

	public final Constraint_defContext constraint_def() throws RecognitionException {
		Constraint_defContext _localctx = new Constraint_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constraint_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((Constraint_defContext)_localctx).constraint_field = constraint_field();
			setState(72);
			((Constraint_defContext)_localctx).constraint_type = constraint_type();
			((Constraint_defContext)_localctx).ast =  new TripleConstraintNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), ((Constraint_defContext)_localctx).constraint_field.ast, ((Constraint_defContext)_localctx).constraint_type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_fieldContext extends ParserRuleContext {
		public FieldConstraintNode ast;
		public Prefix_invContext prefix_inv;
		public Property_defContext property_def;
		public Prefix_invContext prefix_inv() {
			return getRuleContext(Prefix_invContext.class,0);
		}
		public Property_defContext property_def() {
			return getRuleContext(Property_defContext.class,0);
		}
		public Constraint_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_field; }
	}

	public final Constraint_fieldContext constraint_field() throws RecognitionException {
		Constraint_fieldContext _localctx = new Constraint_fieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constraint_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((Constraint_fieldContext)_localctx).prefix_inv = prefix_inv();
			setState(76);
			match(T__1);
			setState(77);
			((Constraint_fieldContext)_localctx).property_def = property_def();
			((Constraint_fieldContext)_localctx).ast =  new FieldConstraintNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), new PrefixInvNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), ((Constraint_fieldContext)_localctx).prefix_inv.ast.prefixName(), ((Constraint_fieldContext)_localctx).property_def.ast));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_typeContext extends ParserRuleContext {
		public TypeConstraintNode ast;
		public Prefix_invContext prefix_inv;
		public Primitive_typeContext primitive_type;
		public Shape_invContext shape_inv;
		public Prefix_invContext prefix_inv() {
			return getRuleContext(Prefix_invContext.class,0);
		}
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public Shape_invContext shape_inv() {
			return getRuleContext(Shape_invContext.class,0);
		}
		public Constraint_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_type; }
	}

	public final Constraint_typeContext constraint_type() throws RecognitionException {
		Constraint_typeContext _localctx = new Constraint_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constraint_type);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((Constraint_typeContext)_localctx).prefix_inv = prefix_inv();
				setState(81);
				match(T__1);
				setState(82);
				((Constraint_typeContext)_localctx).primitive_type = primitive_type();
				((Constraint_typeContext)_localctx).ast =  new TypeConstraintNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), new PrefixInvNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), ((Constraint_typeContext)_localctx).prefix_inv.ast.prefixName(), ((Constraint_typeContext)_localctx).primitive_type.ast));
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(T__5);
				setState(86);
				match(T__1);
				setState(87);
				((Constraint_typeContext)_localctx).shape_inv = shape_inv();
				((Constraint_typeContext)_localctx).ast =  new TypeConstraintNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), new ShapeInvNode(_localctx.start.getLine(), _localctx.start.getCharPositionInLine(), ((Constraint_typeContext)_localctx).shape_inv.ast.shapeName()));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Property_defContext extends ParserRuleContext {
		public String ast;
		public Token ID;
		public TerminalNode ID() { return getToken(ShExLParser.ID, 0); }
		public Property_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property_def; }
	}

	public final Property_defContext property_def() throws RecognitionException {
		Property_defContext _localctx = new Property_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_property_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((Property_defContext)_localctx).ID = match(ID);
			((Property_defContext)_localctx).ast =  (((Property_defContext)_localctx).ID!=null?((Property_defContext)_localctx).ID.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_invContext extends ParserRuleContext {
		public ShapeInvNode ast;
		public Token ID;
		public TerminalNode ID() { return getToken(ShExLParser.ID, 0); }
		public Shape_invContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_inv; }
	}

	public final Shape_invContext shape_inv() throws RecognitionException {
		Shape_invContext _localctx = new Shape_invContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_shape_inv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((Shape_invContext)_localctx).ID = match(ID);
			((Shape_invContext)_localctx).ast =  new ShapeInvNode((((Shape_invContext)_localctx).ID!=null?((Shape_invContext)_localctx).ID.getLine():0), (((Shape_invContext)_localctx).ID!=null?((Shape_invContext)_localctx).ID.getCharPositionInLine():0)+1, (((Shape_invContext)_localctx).ID!=null?((Shape_invContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_invContext extends ParserRuleContext {
		public PrefixInvNode ast;
		public Token ID;
		public TerminalNode ID() { return getToken(ShExLParser.ID, 0); }
		public Prefix_invContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_inv; }
	}

	public final Prefix_invContext prefix_inv() throws RecognitionException {
		Prefix_invContext _localctx = new Prefix_invContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_prefix_inv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(98);
				((Prefix_invContext)_localctx).ID = match(ID);
				}
			}

			((Prefix_invContext)_localctx).ast =  new PrefixInvNode((((Prefix_invContext)_localctx).ID!=null?((Prefix_invContext)_localctx).ID.getLine():0), (((Prefix_invContext)_localctx).ID!=null?((Prefix_invContext)_localctx).ID.getCharPositionInLine():0)+1, (((Prefix_invContext)_localctx).ID!=null?((Prefix_invContext)_localctx).ID.getText():null), "");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typeContext extends ParserRuleContext {
		public String ast;
		public Primitive_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_type; }
	}

	public final Primitive_typeContext primitive_type() throws RecognitionException {
		Primitive_typeContext _localctx = new Primitive_typeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_primitive_type);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(T__6);
				((Primitive_typeContext)_localctx).ast =  "INTEGER";
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(T__7);
				((Primitive_typeContext)_localctx).ast =  "STRING";
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				match(T__8);
				((Primitive_typeContext)_localctx).ast =  "DOUBLE";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}